# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.13 2003/11/30 01:51:44 drobbins Exp $
 
  29 Nov 2003; Daniel Robbins <drobbins@gentoo.org>: Tinderbox target added. See
  tinderbox examples in examples/ dir.
  
  08 Nov 2003; Daniel Robbins <drobbins@gentoo.org>: spec file support integrated
  into catalyst. Use "-f/--file specfile" as argument; see examples dir for examples.
  "grp" target now functional. See examples/x86-grp-20031102.spec for an example of
  how to use it.
 
  08 Nov 2003; Daniel Robbins <drobbins@gentoo.org>: support functions for spec
  file parsing and reading added. Will get added to the code soon.
  
  05 Nov 2003; Daniel Robbins <drobbins@gentoo.org>: Many bug fixes later, things
  seem to be working well for stage1/2/3 so I've added a README.
  
  28 Oct 2003; Daniel Robbins <drobbins@gentoo.org>: Significant rework of code
  structure. Everything is falling nicely into place.
  
  28 Oct 2003; Daniel Robbins <drobbins@gentoo.org>: Exception handling fully-
  integrated into current prototype code.
  
  27 Oct 2003; Daniel Robbins <drobbins@gentoo.org>: beginning of exception
  handling integration, got some of the target code nicely fleshed out.
  
  24 Oct 2003; Daniel Robbins <drobbins@gentoo.org>: major code rework in 
  progress on the python parts.
  
  17 Oct 2003; zhen <zhen@gentoo.org> files/grp/x86/x86.conf,
  files/grp/x86/x86.pkg.cd1, files/grp/x86/x86.pkg.cd2, files/grp/x86/x86.src,
  files/livecd/x86-basic/base.pkg, files/livecd/x86-basic/kern.pkg:
  for organiation's sake, I have moved the files, such as livecd foundations,
  into catalyst/files. It will make it easier for us when ebuild time comes
  around.

  15 Oct 2003; zhen <zhen@gentoo.org> targets/stage3/stage3.sh:
  All preliminary target build scripts are now added and coded to near as spec
  that we can have at this point.
